profilelist1exp/unpackaged/objects/Status_of_Deal_Certification__c.object
<CustomObject>
    <fields>
        <fullName>Days_from_Soln_Cert_Date__c</fullName>
        <formula>TODAY() - Deal_Cert_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Soln Cert Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Cert_Date__c</fullName>
        <label>Deal Cert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Cert__c</fullName>
        <label>Deal Cert</label>
        <referenceTo>Solution_Certification__c</referenceTo>
        <relationshipLabel>Status of Deal Certifications</relationshipLabel>
        <relationshipName>Status_of_Deal_Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deal_Certification__c</fullName>
        <label>Deal Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diff_from_max_date__c</fullName>
        <formula>Deal_Cert__r.Max_Sol_Cert_Date__c - Deal_Cert_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff from max date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Status of Deal Certification</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Status of Deal Certification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status of Deal Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>